--- a/scr/index.html
+++ b/scr/index.html
@@ -55,7 +55,7 @@
             </h3>
           </div>
           <div class="card">
-            <img src="/img/oun.png" alt="oun" />
+            <img src="/img/mor.png" alt="oun" />
             <h3>KHEANG <br />MOROKOT</h3>
           </div>
         </div>
@@ -75,9 +75,9 @@
           </div>
         </div>
         <div class="infor-team">
-          <img src="/img/chea.png" alt="chea" />
+          <img src="/img/oun.png" alt="chea" />
           <div class="infor">
-            <h2>Mr.LIM VITHTYEA</h2>
+            <h2>Mr.DOEM SAMAUN</h2>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse
               laborum, rerum illum perferendis velit asperiores magnam maiores
@@ -87,9 +87,9 @@
           </div>
         </div>
         <div class="infor-team">
-          <img src="/img/chea.png" alt="chea" />
+          <img src="/img/mor.png" alt="chea" />
           <div class="infor">
-            <h2>Mr.LIM VITHTYEA</h2>
+            <h2>Mrs.KHEANG MOROKOT</h2>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse
               laborum, rerum illum perferendis velit asperiores magnam maiores
