--- a/scr/index.html
+++ b/scr/index.html
@@ -87,7 +87,7 @@
           </div>
         </div>
         <div class="infor-team">
-          <img src="/img/mor.png" alt="chea" />
+          <img src="/img/mor.png" alt="mor" />
           <div class="infor">
             <h2>Mrs.KHEANG MOROKOT</h2>
             <p>
