add feature and technology

--- a/scr/index.html
+++ b/scr/index.html
@@ -99,6 +99,35 @@
           </div>
         </div>
       </div>
+      <div class="feature">
+        <h1>Feature And Technology</h1>
+        <div class="feature-techno">
+          <div class="card-skill">
+            <img src="/img/germini.png" alt="germini" />
+            <p>Germini API</p>
+          </div>
+          <div class="card-skill">
+            <img src="/img/python.png" alt="python" />
+            <p>Python</p>
+          </div>
+          <div class="card-skill">
+            <img src="/img/html.png" alt="html" />
+            <p>HTML</p>
+          </div>
+          <div class="card-skill">
+            <img src="/img/css.png" alt="css" />
+            <p>css</p>
+          </div>
+          <div class="card-skill">
+            <img src="/img/js.png" alt="js" />
+            <p>JavaScript</p>
+          </div>
+          <div class="card-skill">
+            <img src="/img/react .png" alt="react" />
+            <p>React</p>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
