--- a/scr/index.html
+++ b/scr/index.html
@@ -27,10 +27,7 @@
       <div class="hero">
         <h1>DEBUG</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
-          placeat necessitatibus quibusdam. Cumque inventore vitae tempore
-          veritatis repellendus iusto repellat aliquam minus eos in, distinctio
-          corporis vero aut numquam porro!
+          Your AI personal assistance that provided an information about what you asked <br>using Gemini API provided by Google
         </p>
         <div class="btn">
           <button class="btn1">GET STARTED</button>
@@ -65,12 +62,11 @@
         <div class="infor-team">
           <img src="/img/chea.png" alt="chea" />
           <div class="infor">
-            <h2>Mr.LIM VITHTYEA</h2>
+            <h2>Mr.LIM VITHTYEA(Full-Stack Developer)</h2>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse
-              laborum, rerum illum perferendis velit asperiores magnam maiores
-              vitae error dignissimos, delectus iure sed cum magni ratione neque
-              provident excepturi ut.
+              A self-taught developer, I’ve built a foundation in HTML, CSS, JavaScript, Flutter, and Dart by 
+              independently studying and creating a real-world project. Though I have no professional 
+              experience, my dedication to hands-on learning has prepared me to contribute effectively to the team.
             </p>
           </div>
         </div>
