add 2 pic  and edit our team

--- a/scr/index.html
+++ b/scr/index.html
@@ -56,6 +56,14 @@
             <img src="/img/mor.png" alt="oun" />
             <h3>KHEANG <br />MOROKOT</h3>
           </div>
+          <div class="card">
+            <img src="/img/lin.png" alt="oun" />
+            <h3>AN <br />DALIN</h3>
+          </div>
+          <div class="card">
+            <img src="/img/vin.png" alt="oun" />
+            <h3>SAT <br />SREYVIN</h3>
+          </div>
         </div>
       </div>
       <div class="about-team">
@@ -78,10 +86,10 @@
           <div class="infor">
             <h2>Mr.DOEM SAMAUN (Front-end Developer)</h2>
             <p>
-              Hello Guys! My name is Doem SamAun . I'm a Junior college student at the
-              National University of Management located in the middle of Phnom
-              Penh. I learned Front-End Web Development by myself through
-              tutorials and online documentation. 
+              Hello Guys! My name is Doem SamAun . I'm a Junior college student
+              at the National University of Management located in the middle of
+              Phnom Penh. I learned Front-End Web Development by myself through
+              tutorials and online documentation.
             </p>
           </div>
         </div>
