add animetion and text in informatio

--- a/scr/index.html
+++ b/scr/index.html
@@ -105,6 +105,30 @@
             </p>
           </div>
         </div>
+        <div class="infor-team">
+          <img src="/img/lin.png" alt="mor" />
+          <div class="infor">
+            <h2>Mrs.AN DALIN</h2>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse
+              laborum, rerum illum perferendis velit asperiores magnam maiores
+              vitae error dignissimos, delectus iure sed cum magni ratione neque
+              provident excepturi ut.
+            </p>
+          </div>
+        </div>
+        <div class="infor-team">
+          <img src="/img/vin.png" alt="mor" />
+          <div class="infor">
+            <h2>Mrs.SAT SREYVIN</h2>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse
+              laborum, rerum illum perferendis velit asperiores magnam maiores
+              vitae error dignissimos, delectus iure sed cum magni ratione neque
+              provident excepturi ut.
+            </p>
+          </div>
+        </div>
       </div>
       <div class="feature">
         <h1>Feature And Technology</h1>
